--- a/package.json
+++ b/package.json
@@ -23,9 +23,12 @@
     "process": "^0.11.10"
   },
   "dependencies": {
+    "formik": "^2.4.5",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
-  },  
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.21.2",
+    "uuid": "^9.0.1"
+  },
   "browserslist": [
     "last 2 version"
   ]
